# ATLAS-Framework

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  requirements.txt
data/eia/: eia_comprehensive_results.json  eia_glossary_simple.json
data/fabric-patterns/: analyze_claims.json  extract_wisdom.json  find_patterns.json
deploy/: deploy.sh
deploy/docker/: .dockerignore  Dockerfile  docker-compose.yml  docker-swarm.yml
deploy/github-actions/: ci.yml  deploy.yml  validate-data.yml
deploy/k8s/: deployment.yaml  kustomization.yaml
docs/: ideas.md  index.md
docs/architecture/: ATLAS_Framework_Architectural_Plan.md  design-principles.md  mermaid-examples.md  overview.md  principles.md  🏗️ ATLAS Framework - Complete Modular Architecture.md  🏗️ ATLAS Framework - True DRY Architecture with Composition.md  🏗️ Industry Taxonomies: Advanced Agentic AI Architecture Guide.md
docs/eia-analysis/: Comprehensive EIA Glossary Analysis Report.md  Comprehensive EIA Glossary Analysis.md  EIA Energy Industry Glossary Extraction Report.md  EIA Glossary Extractor - Agentic LLM Solution.md  EIA Glossary Site Map and Cross-Reference Analysis.md  eia_glossary_analysis.md
docs/examples/: basic-usage.md  energy-taxonomy.md  interactive-demo.md
docs/features/: fabric-patterns.md  graph-database.md  knowledge-graph.md
docs/getting-started/: getting-started.md  installation.md  quick-start.md
docs/guides/: ATLAS Framework Website - Permanent Deployment Guide.md  Industry_Taxonomies GitHub Repository Structure.md  Industry_Taxonomies_Directory_Structure.txt  Industry_Taxonomies_File_List.txt
docs/guides/anthropic/: 🏗️ Universal Multi-Provider System Architecture.md
examples/: basic_node_creation.py
src/atlas/: __init__.py
src/atlas/adapters/: __init__.py
src/atlas/config/: __init__.py  config.py  loader.py  registry.py
src/atlas/core/: __init__.py  client.py  exceptions.py  node.py  relationship.py  taxonomy.py  version.py
src/atlas/decorators/: __init__.py  atlas_operation.py  fabric_pattern.py  validate_graph_operation.py
src/atlas/descriptors/: __init__.py  cached_property.py  lazy_property.py  validated_property.py
src/atlas/enums/: __init__.py  fuel_group.py  node_label.py  validation.py
src/atlas/extractors/: __init__.py  comprehensive_eia_extractor.py  distributed_taxonomy_system.py  eia_glossary_extractor.py  eia_simple_extractor.py  energy_taxonomy_extractor.py  focused_comprehensive_extractor.py
src/atlas/models/: __init__.py  pattern.py  schema.py
tests/: conftest.py  test_enums.py  test_full_extraction_workflow.py  test_llm.py
website/: extra.css  extra.js  main.html  mkdocs.yml  netlify.toml  vercel.json
website/src/: platforms.ts
website/src/components/: DeploymentWizard.tsx  Home.tsx  PlatformSelector.tsx  SearchableDocs.tsx
